--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "heroku-postbuild": "gatsby build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "gatsby": "^2.5.7",
+    "gatsby-cli": "^2.6.4",
+    "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-typography": "^2.2.13",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-typography": "^0.16.19",
