--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "gatsby": "^2.5.7",
     "gatsby-cli": "^2.6.4",
+    "gatsby-image": "^2.1.2",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-typography": "^2.2.13",
+    "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-sharp": "^2.1.21",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
