--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "McKinstry Law Firm",
   "version": "0.1.0",
   "license": "MIT",
+  "engines": {
+    "node": "12.1.0"
+  },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
