--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^2.5.7",
     "gatsby-cli": "^2.6.4",
     "gatsby-image": "^2.1.2",
+    "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-typography": "^2.2.13",
@@ -30,6 +31,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19"
