--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "gatsby": "^2.5.7",
+    "gatsby-background-image": "^0.7.0",
     "gatsby-cli": "^2.6.4",
-    "gatsby-image": "^2.1.2",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.3",
