--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
     "gatsby": "^2.5.7",
     "gatsby-background-image": "^0.7.0",
     "gatsby-cli": "^2.6.4",
+    "gatsby-image": "^2.1.4",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.3",
-    "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-remark": "^2.4.0",
     "gatsby-transformer-sharp": "^2.1.21",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.17.1"
