--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-background-image": "^0.7.0",
     "gatsby-cli": "^2.6.4",
     "gatsby-image": "^2.1.4",
+    "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.3",
@@ -32,7 +33,8 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-transition-group": "^4.1.1"
   },
   "devDependencies": {
     "prettier": "^1.17.1"
