--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-background-image": "^0.7.0",
     "gatsby-cli": "^2.6.4",
     "gatsby-image": "^2.1.4",
+    "gatsby-plugin-google-gtag": "^2.7.0",
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
