--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-cli": "^2.12.58",
     "gatsby-image": "^2.1.4",
     "gatsby-plugin-google-gtag": "^2.7.0",
+    "gatsby-plugin-htaccess": "^1.4.0",
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
