--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "heroku-postbuild": "gatsby build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.6.0",
     "gatsby": "^2.5.7",
     "gatsby-background-image": "^0.7.0",
@@ -34,6 +31,7 @@
     "gatsby-source-filesystem": "^2.0.38",
     "gatsby-transformer-sharp": "^2.1.21",
     "install": "^0.13.0",
+    "intersection-observer": "^0.12.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.4.3",
